brewtarget (2.1.0-1) unstable; urgency=low

  * New upstream release

 -- Philip G. Lee <rocketman768@gmail.com>  Sat, 26 Jul 2014 09:24:30 -0500

brewtarget (2.0.3-1) unstable; urgency=low

  * New upstream release

 -- Philip G. Lee <rocketman768@gmail.com>  Sat, 03 May 2014 09:38:30 -0500

brewtarget (2.0.2-1) unstable; urgency=low

  * New upstream release
  * Updated copyright years.
  * Changed references from sourceforge.net to brewtarget.org.
  * Bumped standards-version to 3.9.5.
  * Requires debhelper > 9.0.

 -- Philip G. Lee <rocketman768@gmail.com>  Mon, 27 Jan 2014 08:38:30 -0600

brewtarget (2.0.1-1) unstable; urgency=low

  * New upstream release
  * Now importing hardening flags.
  * Updated standards version to 3.9.4.
  * Updated compat to 9
  * Added libqtwebkit-dev to the build dependencies. 

 -- Philip G. Lee <rocketman768@gmail.com>  Mon, 17 Mar 2013 20:41:21 -0600

brewtarget (2.0.0-1) unstable; urgency=low

  * New upstream release

 -- Philip G. Lee <rocketman768@gmail.com>  Sat, 29 Dec 2012 09:02:42 -0500

brewtarget (1.2.4-1) unstable; urgency=low

  * New upstream release

 -- Philip G. Lee <rocketman768@gmail.com>  Sun, 02 Oct 2011 12:23:44 -0500

brewtarget (1.2.3-1) unstable; urgency=low

  * New upstream release 1.2.3
  * Initial debian release (Closes: #538751)

 -- Philip G. Lee <rocketman768@gmail.com>  Sun, 13 Mar 2011 09:38:00 -0600
 