@@ -2,7 +2,7 @@ Source: brewtarget
 Section: misc
 Priority: optional
 Maintainer: Philip G. Lee <rocketman768@gmail.com>
-Build-Depends: cmake (>= 2.8), debhelper (>= 9.0), autotools-dev, libqt4-dev, qt4-qmake, libphonon-dev, libqtwebkit-dev, sqlite3, hardening-includes
+Build-Depends: cmake (>= 2.8), debhelper (>= 9.0), autotools-dev, libqt4-dev, qt4-qmake, libphonon-dev, libqtwebkit-dev, sqlite3
 Standards-Version: 3.9.5
 Homepage: http://www.brewtarget.org
 
