@@ -1,23 +1,12 @@
-This package was debianized by:
-
-    Philip G. Lee <rocketman768@gmail.com> on Tue, 16 Jun 2009 21:52:17 -0500
-
-It was downloaded from:
-
-    http://www.brewtarget.org
-
-Upstream Author:
-
-    Philip G. Lee <rocketman768@gmail.com>
-
-The Debian packaging is:
-
-    Copyright (C) 2009-2013, Philip G. Lee <rocketman768@gmail.com>
-
-and is licensed under the GPL-3.
+Format: http://www.debian.org/doc/packaging-manuals/copyright-format/1.0/
+Upstream-Name: Brewtarget
+Upstream-Contact: Philip G. Lee <rocketman768@gmail.com>
+Source: https://gitorious.org/brewtarget
+Copyright: 2009-2014, Philip G. Lee <rocketman768@gmail.com>
+License: GPL-3
 
 Files: *
-Copyright: 2009-2013, Philip G. Lee <rocketman768@gmail.com>
+Copyright: 2009-2014, Philip G. Lee <rocketman768@gmail.com>
 License: GPL-3
 
 Files: cmake/modules/FindPhonon.cmake
@@ -29,14 +18,14 @@ Copyright: 2011, Jay Cummings <finalgravitypodcast@gmail.com>
 License: GPL-3
 
 Files: images/*
-Copyright: 2009-2013, Philip G. Lee <rocketman768@gmail.com>
+Copyright: 2009-2014, Philip G. Lee <rocketman768@gmail.com>
            2009-2010, Eric Tamme
 License: WTFPL-2
 
 Files: images/flag* images/bubbles.svg images/convert.svg
        images/clipboard.svg images/refractometer.svg
        images/restore.svg images/yeastVial.svg
-Copyright: 2012, Philip G. Lee <rocketman768@gmail.com>
+Copyright: 2012-2014, Philip G. Lee <rocketman768@gmail.com>
 License: WTFPL-2
 
 Files: images/edit-copy.png images/document-print-preview.png
@@ -44,42 +33,88 @@ Files: images/edit-copy.png images/document-print-preview.png
        images/printer.png images/server-database.png
        images/kbruch.png images/help-contents.png
 Copyright: David Vignoni et al. <www.oxygen-icons.org>
-License: CC-BY-SA-3.0 or LGPL-3.0
+License: CC-BY-SA-3.0
 
 Files: images/backup.png
 Copyright: David Vignoni <www.icon-king.com/projects/nuvola>
 License: LGPL-2.1
 
 License: GPL-3
-    This package is free software; you can redistribute it and/or modify
-    it under the terms of the GNU General Public License as published by
-    the Free Software Foundation; either version 3 of the License, or
-    (at your option) any later version.
+ This package is free software; you can redistribute it and/or modify
+ it under the terms of the GNU General Public License as published by
+ the Free Software Foundation; either version 3 of the License, or
+ (at your option) any later version.
+ .
+ This package is distributed in the hope that it will be useful,
+ but WITHOUT ANY WARRANTY; without even the implied warranty of
+ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ GNU General Public License for more details.
+ .
+ You should have received a copy of the GNU General Public License
+ along with this package;if not, write to the Free Software Foundation,
+ Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301 USA, or visit
+ http://www.gnu.org/copyleft/gpl.html
+ .
+ On Debian systems, the complete text of the GNU General
+ Public License can be found in `/usr/share/common-licenses/GPL-3'.
 
-    This package is distributed in the hope that it will be useful,
-    but WITHOUT ANY WARRANTY; without even the implied warranty of
-    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-    GNU General Public License for more details.
+License: LGPL-2.1
+ This library is free software; you can redistribute it and/or
+ modify it under the terms of the GNU Lesser General Public
+ License as published by the Free Software Foundation; either
+ version 2.1 of the License, or (at your option) any later version.
+ .
+ This library is distributed in the hope that it will be useful,
+ but WITHOUT ANY WARRANTY; without even the implied warranty of
+ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU 
+ Lesser General Public License for more details.
+ .
+ You should have received a copy of the GNU Lesser General Public
+ License along with this library; if not, write to the Free Software
+ Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA
+ .
+ On Debian systems, the complete text of the GNU General
+ Public License can be found in `/usr/share/common-licenses/LGPL-2.1'.
 
-    You should have received a copy of the GNU General Public License
-    along with this package;if not, write to the Free Software Foundation,
-    Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301 USA, or visit
-    http://www.gnu.org/copyleft/gpl.html
-
-On Debian systems, the complete text of the GNU General
-Public License can be found in `/usr/share/common-licenses/GPL-3'.
+License: BSD-2-clause
+ Copyright (c) The Regents of the University of California.
+ All rights reserved.
+ .
+ Redistribution and use in source and binary forms, with or without
+ modification, are permitted provided that the following conditions
+ are met:
+ 1. Redistributions of source code must retain the above copyright
+    notice, this list of conditions and the following disclaimer.
+ 2. Redistributions in binary form must reproduce the above copyright
+    notice, this list of conditions and the following disclaimer in the 
+    documentation and/or other materials provided with the distribution.
+ 3. Neither the name of the University nor the names of its contributors
+    may be used to endorse or promote products derived from this software
+    without specific prior written permission.
+ .
+ THIS SOFTWARE IS PROVIDED BY THE REGENTS AND CONTRIBUTORS ``AS IS'' AND 
+ ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE 
+ IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
+ ARE DISCLAIMED.  IN NO EVENT SHALL THE REGENTS OR CONTRIBUTORS BE LIABLE
+ FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
+ DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS
+ OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION)
+ HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT
+ LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY 
+ OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
+ SUCH DAMAGE.
 
 License: WTFPL-2
-   Copyright (C) 2004 Sam Hocevar <sam@hocevar.net>
-
-   Everyone is permitted to copy and distribute verbatim or modified
-   copies of this license document, and changing it is allowed as long
-   as the name is changed.
-
-   DO WHAT THE FUCK YOU WANT TO PUBLIC LICENSE
-   TERMS AND CONDITIONS FOR COPYING, DISTRIBUTION AND MODIFICATION
-
-   0. You just DO WHAT THE FUCK YOU WANT TO.
+ Copyright (C) 2004 Sam Hocevar <sam@hocevar.net>
+ .
+ Everyone is permitted to copy and distribute verbatim or modified
+ copies of this license document, and changing it is allowed as long
+ as the name is changed.
+ .
+ DO WHAT THE FUCK YOU WANT TO PUBLIC LICENSE
+ TERMS AND CONDITIONS FOR COPYING, DISTRIBUTION AND MODIFICATION
+ .
+ 0. You just DO WHAT THE FUCK YOU WANT TO.
 
 License: CC-BY-SA-3.0
  THE WORK (AS DEFINED BELOW) IS PROVIDED UNDER THE TERMS OF THIS
@@ -87,15 +122,15 @@ License: CC-BY-SA-3.0
  PROTECTED BY COPYRIGHT AND/OR OTHER APPLICABLE LAW. ANY USE OF THE
  WORK OTHER THAN AS AUTHORIZED UNDER THIS LICENSE OR COPYRIGHT LAW IS
  PROHIBITED.
-
+ .
  BY EXERCISING ANY RIGHTS TO THE WORK PROVIDED HERE, YOU ACCEPT AND
  AGREE TO BE BOUND BY THE TERMS OF THIS LICENSE. TO THE EXTENT THIS
  LICENSE MAY BE CONSIDERED TO BE A CONTRACT, THE LICENSOR GRANTS YOU
  THE RIGHTS CONTAINED HERE IN CONSIDERATION OF YOUR ACCEPTANCE OF SUCH
  TERMS AND CONDITIONS.
-
+ .
  1. Definitions
-
+ .
   a. "Adaptation" means a work based upon the Work, or upon the Work
      and other pre-existing works, such as a translation, adaptation,
      derivative work, arrangement of music or other alterations of a
@@ -190,19 +225,19 @@ License: CC-BY-SA-3.0
      the right of fixation and reproducing fixations of the Work,
      including storage of a protected performance or phonogram in
      digital form or other electronic medium.
-
+ .
  2. Fair Dealing Rights. Nothing in this License is intended to
  reduce, limit, or restrict any uses free from copyright or rights
  arising from limitations or exceptions that are provided for in
  connection with the copyright protection under copyright law or other
  applicable laws.
-
+ .
  3. License Grant. Subject to the terms and conditions of this
  License, Licensor hereby grants You a worldwide, royalty-free,
  non-exclusive, perpetual (for the duration of the applicable
  copyright) license to exercise the rights in the Work as stated
  below:
-
+ .
   a. to Reproduce the Work, to incorporate the Work into one or more
      Collections, and to Reproduce the Work as incorporated in the
      Collections;
@@ -217,7 +252,7 @@ License: CC-BY-SA-3.0
      incorporated in Collections; and,
   d. to Distribute and Publicly Perform Adaptations.
   e. For the avoidance of doubt:
-
+ .
       i. Non-waivable Compulsory License Schemes. In those
          jurisdictions in which the right to collect royalties through
          any statutory or compulsory licensing scheme cannot be
@@ -236,16 +271,16 @@ License: CC-BY-SA-3.0
          administers voluntary licensing schemes, via that society,
          from any exercise by You of the rights granted under this
          License.
-
+ .
  The above rights may be exercised in all media and formats whether
  now known or hereafter devised. The above rights include the right to
  make such modifications as are technically necessary to exercise the
  rights in other media and formats. Subject to Section 8(f), all
  rights not expressly granted by Licensor are hereby reserved.
-
+ .
  4. Restrictions. The license granted in Section 3 above is expressly
  made subject to and limited by the following restrictions:
-
+ .
   a. You may Distribute or Publicly Perform the Work only under the
      terms of this License. You must include a copy of, or the Uniform
      Resource Identifier (URI) for, this License with every copy of
@@ -348,9 +383,9 @@ License: CC-BY-SA-3.0
      applicable national law, to enable You to reasonably exercise
      Your right under Section 3(b) of this License (right to make
      Adaptations) but not otherwise.
-
+ .
  5. Representations, Warranties and Disclaimer
-
+ .
  UNLESS OTHERWISE MUTUALLY AGREED TO BY THE PARTIES IN WRITING,
  LICENSOR OFFERS THE WORK AS-IS AND MAKES NO REPRESENTATIONS OR
  WARRANTIES OF ANY KIND CONCERNING THE WORK, EXPRESS, IMPLIED,
@@ -360,15 +395,15 @@ License: CC-BY-SA-3.0
  OR THE PRESENCE OF ABSENCE OF ERRORS, WHETHER OR NOT DISCOVERABLE.
  SOME JURISDICTIONS DO NOT ALLOW THE EXCLUSION OF IMPLIED WARRANTIES,
  SO SUCH EXCLUSION MAY NOT APPLY TO YOU.
-
+ .
  6. Limitation on Liability. EXCEPT TO THE EXTENT REQUIRED BY
  APPLICABLE LAW, IN NO EVENT WILL LICENSOR BE LIABLE TO YOU ON ANY
  LEGAL THEORY FOR ANY SPECIAL, INCIDENTAL, CONSEQUENTIAL, PUNITIVE OR
  EXEMPLARY DAMAGES ARISING OUT OF THIS LICENSE OR THE USE OF THE WORK,
  EVEN IF LICENSOR HAS BEEN ADVISED OF THE POSSIBILITY OF SUCH DAMAGES.
-
+ .
  7. Termination
-
+ .
   a. This License and the rights granted hereunder will terminate
      automatically upon any breach by You of the terms of this
      License. Individuals or entities who have received Adaptations or
@@ -385,9 +420,9 @@ License: CC-BY-SA-3.0
      other license that has been, or is required to be, granted under
      the terms of this License), and this License will continue in
      full force and effect unless terminated as stated above.
-
+ .
  8. Miscellaneous
-
+ .
   a. Each time You Distribute or Publicly Perform the Work or a
      Collection, the Licensor offers to the recipient a license to the
      Work on the same terms and conditions as the license granted to
@@ -428,9 +463,9 @@ License: CC-BY-SA-3.0
      not granted under this License, such additional rights are deemed
      to be included in the License; this License is not intended to
      restrict the license of any rights under applicable law.
-
+ .
      Creative Commons Notice
-
+ .
      Creative Commons is not a party to this License, and makes no
      warranty whatsoever in connection with the Work. Creative Commons
      will not be liable to You or any party on any legal theory for
@@ -440,7 +475,7 @@ License: CC-BY-SA-3.0
      sentences, if Creative Commons has expressly identified itself as
      the Licensor hereunder, it shall have all rights and obligations
      of Licensor.
-
+ .
      Except for the limited purpose of indicating to the public that
      the Work is licensed under the CCPL, Creative Commons does not
      authorize the use by either party of the trademark "Creative
@@ -451,5 +486,5 @@ License: CC-BY-SA-3.0
      its website or otherwise made available upon request from time to
      time. For the avoidance of doubt, this trademark restriction does
      not form part of the License.
-
+ .
      Creative Commons may be contacted at http://creativecommons.org/.
